--- a/MovieApp/Base.lproj/Main.storyboard
+++ b/MovieApp/Base.lproj/Main.storyboard
@@ -1,26 +1,166 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Xln-QY-awi">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Navigation Controller-->
+        <scene sceneID="dSu-ZO-yHn">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <navigationController id="Xln-QY-awi" sceneMemberID="viewController">
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" translucent="NO" prompted="NO"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" translucent="NO" id="RGb-9M-wD1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Dst-2k-qKF" kind="relationship" relationship="rootViewController" id="sqM-pm-bgE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RJW-jM-1XK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-927" y="-373"/>
+        </scene>
+        <!--Upcoming Movies View Controller-->
+        <scene sceneID="lxJ-S2-qsB">
+            <objects>
+                <viewController id="Dst-2k-qKF" customClass="UpcomingMoviesViewController" customModule="MovieApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="q2E-tY-oYf"/>
+                        <viewControllerLayoutGuide type="bottom" id="QAY-b8-iWl"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="mum-Qj-DbX">
+                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" barStyle="black" placeholder="Search movies" translatesAutoresizingMaskIntoConstraints="NO" id="X4R-4D-AF6">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="200" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="RFe-WI-pwv">
+                                <rect key="frame" x="0.0" y="44" width="375" height="559"/>
+                                <color key="backgroundColor" red="0.23921568627450979" green="0.23921568627450979" blue="0.23921568627450979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="upcomingMovieCell" id="ANy-wH-Ur3" customClass="UpcomingMovieTableViewCell" customModule="MovieApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="200"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ANy-wH-Ur3" id="hZY-2z-rcx">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fAz-FT-aWm">
+                                                    <rect key="frame" x="-0.5" y="0.0" width="375" height="200"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                                </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ely-dT-DS3" userLabel="Title_Background">
+                                                    <rect key="frame" x="0.0" y="160" width="375" height="40"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="disclosure_symbol" translatesAutoresizingMaskIntoConstraints="NO" id="9oR-f4-k4i">
+                                                            <rect key="frame" x="345" y="5" width="30" height="30"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="9oR-f4-k4i" secondAttribute="height" multiplier="1:1" id="J2S-Gv-B3n"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="0.33333333333333331" alpha="0.5958101455479452" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstItem="9oR-f4-k4i" firstAttribute="height" secondItem="Ely-dT-DS3" secondAttribute="height" multiplier="0.75" id="5JH-5f-cwP"/>
+                                                        <constraint firstAttribute="trailing" secondItem="9oR-f4-k4i" secondAttribute="trailing" id="DDC-Mg-Kd3"/>
+                                                        <constraint firstItem="9oR-f4-k4i" firstAttribute="centerY" secondItem="Ely-dT-DS3" secondAttribute="centerY" id="ZkG-eF-0YV"/>
+                                                    </constraints>
+                                                </view>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aPt-tQ-OIE" userLabel="Separator">
+                                                    <rect key="frame" x="0.0" y="196" width="375" height="4"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="4" id="P4F-gy-cZC"/>
+                                                    </constraints>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="qMQ-oG-IA5">
+                                                    <rect key="frame" x="8" y="171" width="337" height="19"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <color key="shadowColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <size key="shadowOffset" width="0.0" height="1"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="yyyy-mm-dd / Genre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9rS-v1-HhB">
+                                                    <rect key="frame" x="8" y="143" width="359" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <color key="shadowColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <size key="shadowOffset" width="0.0" height="1"/>
+                                                </label>
+                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="G3q-L8-P0K">
+                                                    <rect key="frame" x="177" y="90" width="20" height="20"/>
+                                                </activityIndicatorView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="fAz-FT-aWm" firstAttribute="centerY" secondItem="hZY-2z-rcx" secondAttribute="centerY" id="0p8-wm-17K"/>
+                                                <constraint firstItem="G3q-L8-P0K" firstAttribute="centerX" secondItem="hZY-2z-rcx" secondAttribute="centerX" id="6wr-zw-xRi"/>
+                                                <constraint firstItem="aPt-tQ-OIE" firstAttribute="trailing" secondItem="Ely-dT-DS3" secondAttribute="trailing" id="D5l-lA-xzM"/>
+                                                <constraint firstItem="fAz-FT-aWm" firstAttribute="height" secondItem="hZY-2z-rcx" secondAttribute="height" id="DKH-pR-J8t"/>
+                                                <constraint firstItem="Ely-dT-DS3" firstAttribute="leading" secondItem="hZY-2z-rcx" secondAttribute="leading" id="GaY-Z2-Szj"/>
+                                                <constraint firstItem="Ely-dT-DS3" firstAttribute="height" secondItem="hZY-2z-rcx" secondAttribute="height" multiplier="0.2" id="O64-yh-rv6"/>
+                                                <constraint firstItem="Ely-dT-DS3" firstAttribute="top" secondItem="9rS-v1-HhB" secondAttribute="bottom" id="SI6-Oj-CJ5"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="9rS-v1-HhB" secondAttribute="trailing" id="TdB-NG-rIm"/>
+                                                <constraint firstAttribute="leadingMargin" secondItem="9rS-v1-HhB" secondAttribute="leading" id="UHC-mR-RP4"/>
+                                                <constraint firstItem="fAz-FT-aWm" firstAttribute="centerX" secondItem="hZY-2z-rcx" secondAttribute="centerX" id="ZUk-kn-TJG"/>
+                                                <constraint firstItem="aPt-tQ-OIE" firstAttribute="bottom" secondItem="Ely-dT-DS3" secondAttribute="bottom" id="alO-ja-2Sr"/>
+                                                <constraint firstItem="9oR-f4-k4i" firstAttribute="leading" secondItem="qMQ-oG-IA5" secondAttribute="trailing" id="cVy-aR-vJY"/>
+                                                <constraint firstAttribute="bottom" secondItem="Ely-dT-DS3" secondAttribute="bottom" id="dhW-9x-Kmd"/>
+                                                <constraint firstItem="fAz-FT-aWm" firstAttribute="width" secondItem="hZY-2z-rcx" secondAttribute="width" id="gtf-lR-ETr"/>
+                                                <constraint firstAttribute="trailing" secondItem="Ely-dT-DS3" secondAttribute="trailing" id="qcw-XZ-zWY"/>
+                                                <constraint firstItem="aPt-tQ-OIE" firstAttribute="leading" secondItem="Ely-dT-DS3" secondAttribute="leading" id="qit-1m-FUh"/>
+                                                <constraint firstItem="G3q-L8-P0K" firstAttribute="centerY" secondItem="hZY-2z-rcx" secondAttribute="centerY" id="rfL-yN-QhG"/>
+                                                <constraint firstItem="qMQ-oG-IA5" firstAttribute="centerY" secondItem="Ely-dT-DS3" secondAttribute="centerY" id="yWk-mH-Yb7"/>
+                                                <constraint firstItem="qMQ-oG-IA5" firstAttribute="leading" secondItem="hZY-2z-rcx" secondAttribute="leadingMargin" id="zcg-Qb-HSf"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="activityIndicator" destination="G3q-L8-P0K" id="X5G-fQ-PKj"/>
+                                            <outlet property="backdropImageView" destination="fAz-FT-aWm" id="cPc-Mk-XwG"/>
+                                            <outlet property="informationLabel" destination="9rS-v1-HhB" id="g9R-GO-O9M"/>
+                                            <outlet property="titleLabel" destination="qMQ-oG-IA5" id="9vw-jq-Pm5"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="X4R-4D-AF6" secondAttribute="trailing" id="1t3-Xt-Xso"/>
+                            <constraint firstItem="X4R-4D-AF6" firstAttribute="leading" secondItem="mum-Qj-DbX" secondAttribute="leading" id="3Cw-Qc-VhS"/>
+                            <constraint firstItem="RFe-WI-pwv" firstAttribute="leading" secondItem="mum-Qj-DbX" secondAttribute="leading" id="4eH-5R-MQg"/>
+                            <constraint firstItem="RFe-WI-pwv" firstAttribute="top" secondItem="X4R-4D-AF6" secondAttribute="bottom" id="LRI-MG-6mc"/>
+                            <constraint firstAttribute="trailing" secondItem="RFe-WI-pwv" secondAttribute="trailing" id="Mnu-iF-4vw"/>
+                            <constraint firstItem="QAY-b8-iWl" firstAttribute="top" secondItem="RFe-WI-pwv" secondAttribute="bottom" id="OF0-ep-kbD"/>
+                            <constraint firstItem="X4R-4D-AF6" firstAttribute="top" secondItem="q2E-tY-oYf" secondAttribute="bottom" id="Uho-Yv-Kmw"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="vkb-ta-rd4"/>
+                    <connections>
+                        <outlet property="movieSearchBar" destination="X4R-4D-AF6" id="o8m-bn-FtQ"/>
+                        <outlet property="upcomingMoviesTableView" destination="RFe-WI-pwv" id="iF5-sy-OA6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="D35-pb-bpA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-222" y="-374"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="disclosure_symbol" width="512" height="512"/>
+    </resources>
 </document>
